--- a/index.ipynb
+++ b/index.ipynb
@@ -30,11 +30,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/dgoldstein24/anaconda3/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n",
+      "Using TensorFlow backend.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From /Users/dgoldstein24/anaconda3/lib/python3.6/site-packages/tensorflow/python/framework/op_def_library.py:263: colocate_with (from tensorflow.python.framework.ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Colocations handled automatically by placer.\n",
+      "WARNING:tensorflow:From /Users/dgoldstein24/anaconda3/lib/python3.6/site-packages/tensorflow/python/ops/math_ops.py:3066: to_int32 (from tensorflow.python.ops.math_ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use tf.cast instead.\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "conv2d_1 (Conv2D)            (None, 148, 148, 32)      896       \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_1 (MaxPooling2 (None, 74, 74, 32)        0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_2 (Conv2D)            (None, 72, 72, 64)        18496     \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_2 (MaxPooling2 (None, 36, 36, 64)        0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_3 (Conv2D)            (None, 34, 34, 128)       73856     \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_3 (MaxPooling2 (None, 17, 17, 128)       0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_4 (Conv2D)            (None, 15, 15, 128)       147584    \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_4 (MaxPooling2 (None, 7, 7, 128)         0         \n",
+      "_________________________________________________________________\n",
+      "flatten_1 (Flatten)          (None, 6272)              0         \n",
+      "_________________________________________________________________\n",
+      "dense_1 (Dense)              (None, 512)               3211776   \n",
+      "_________________________________________________________________\n",
+      "dense_2 (Dense)              (None, 1)                 513       \n",
+      "=================================================================\n",
+      "Total params: 3,453,121\n",
+      "Trainable params: 3,453,121\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "\n",
+    "from keras.models import load_model\n",
+    "model = load_model('chest_xray_all_with_augmentation_data.h5')\n",
+    "model.summary()"
    ]
   },
   {
@@ -121,7 +176,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
